1998-09-21  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch]: added view_changed signal, similar to child_changed.
	* gnome-mdi.c (app_set_view): update active_view and active_child to
	hold new values before emitting child_changed and/or view_changed
	signals and pass old child/view as signal handler arguments. this
	seems saner since the appropriate gnome-app is already updated to
	match the new view.

1998-09-20  Raja R Harinath  <harinath@cs.umn.edu>

	* pixmaps/Makefile.am (stock_images): New variable.  Lists all the
	stock images.
	(EXTRA_DIST): Add $(stock_images).
	(BUILT_SOURCES): Add `gnome-stock-imlib.h'.
	(gnome-stock-imlib.h): Don't use wildcards, use $(stock_images).

	* Makefile.am (libgnomeui_la_SOURCES): 
	Remove `pixmaps/gnome-stock-imlib.h'. 

Sun Sep 20 18:40:44 1998  John Ellis  <johne@bellatlantic.net>

	* pixmaps/calculator-font.xpm: Changed to png
	* pixmaps/Makefile.am: Changed reference to above.
	* gnome-calculator.c: Changed to use the png file.
	* Makefile.am: Changed gnome-stock-imlib.h to
	pixmaps/gnome-stock-imlib.h

Mon Sep 21 00:03:03 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.c: removed some compiler warnings.
	GnomeStock is now a bit smarter concerning the background color for
	transparency and disabled pixmaps (for those of you who play
	around with the gtk styles).

Sun Sep 20 15:26:41 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* pixmaps/: use PNG images instead of XPMs.
	* puxmaps/Makefile.am: updated to use PNGs.

Sat Sep 19 19:37:13 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.c (gnome_stock_paint): added gtk_widget_queue_draw
	* gnome-stock.[ch]: added menu versions of the timer icons

Sat Sep 19 17:24:58 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* pixmaps/Makefile.am: removed xpm2rgb which needs a Display.
	use ../../tools/convertrgb/convertrgb to build gnome-stock-imlib.h

Sat Sep 19 12:47:35 CEST 1998  Eckehard Berns  <eb@berns.prima.de>
